# NeuralAmpModelerCore

./: .gitignore  CLAUDE.md  CMakeLists.txt
app/ios/: README.md  project.yml
app/ios/NAMApp/: App.swift  AudioEngine.swift  ContentView.swift  Info.plist  NAMApp-Bridging-Header.h  NAMBridge.h  NAMBridge.mm  ResamplingBridge.swift
app/ios/NAMApp.xcodeproj/: project.pbxproj
app/ios/NAMApp.xcodeproj/project.xcworkspace/xcuserdata/ardasatata.xcuserdatad/: UserInterfaceState.xcuserstate
app/ios/Resources/: petrucci_main_lead.nam
tests/ios/: project.yml
tests/ios/NAMTestHost/: Info.plist
tests/ios/NAMTests/: Info.plist  NAMCoreTests.mm
tests/ios/NAMTests.xcodeproj/: project.pbxproj
